-						 >  tty_drvier to work on themself.


Fri Sep 25 CST 2015
- [M] drivers/tty/tty_io.c			[D] driver struct support
- [M] include/sandix/tty.h			[D] Line discipline sperated


Mon Sep 28 CST 2015
- [+] drivers/tty/n_tty.c			[D] Line discipline for tty
- [M] drivers/tty/tty_io.c			[D] Add tty_std_termios support
- [M] include/sandix/termios.h			[D] Fully support termios
- [M] include/sandix/tty.h			[D] Minor fix


Tue Sep 29 CST 2015
- [+] include/sandix/kref.h			[D] Reference Management
- [M] arch/x86/include/asm/atomic.h		[D] ALWAYS_INLINE and more functions.
- [M] include/sandix/tty.h			[D] Add various macros!
- [M] drivers/tty/tty_io.c			[D] Should add some buffer management
-						 >  Linux use tty_port and buffer to manage
-						 >  all queues. This implementation let tty
-						 >  drivers free from buffer management, and
-						 >  the system has a unified mechanism to manage.


Wed Sep 30 CST 2015
- [+] include/sandix/uaccess.h			[D] User/Kernel Space data movement
- [+] include/asm-generic/uaccess.h
- [+] arch/x86/include/asm/uaccess.h
- [+] fs/ext2/					[D] Darling, filesystems lies in the core
- [+] fs/ext3/					 >  part of operating system. Having a
- [+] fs/proc/					 >  totally understanding of fs makes
- [+] fs/Makefile				 >  a more deep insight into OS.
- [+] fs/Kconfig
- [+] include/sandix/fs.h			[D] struct file
- [+] drivers/tty/tty_ldisc.h			[D] Manage line discipline
- [M] drivers/tty/tty_io.c			[D] tty_write method. For device file
- [M] drivers/tty/n_tty.c


Fri Oct  9 CST 2015
- [+] Diary/10-09-2015
- [+] init/version.c				[D] sandix_version string
- [+] include/sandix/kern_levels.h		[D] Kernel information levels
- [M] include/sandix/printk.h			[D] pr_xxx(), printk_once(), pr_xxx_once()


Sat Oct 10 CST 2015
- [+] drivers/tty/n_dummy.c


Tue Oct 13 CST 2015
- [+] Diary/10-13-2015				[D] These days i am debugging uncore PMU
-						 >  Wait a couple days, i will be back!


Thu Oct 15 CST 2015
- [+] Diary/10-15-2015